
Note: over its 30+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 9.1

** Language-version-specific help
Help is now specific to particular language versions, not just C or C++.

** `show english`
The `show` command now allows `english` explicitly as an option.  (Since it's
the default, it's ignored.)

** "Did you mean ...?" improvements
"Did you mean ...?" suggestions have been added for `explain` and type
suggestions are only those valid in the current language.


* Changes in Cdecl 9.0

** Showing as `using` declarations
The `show` command can now alternatively show types as `using` declarations.

** Language-sensitive `show` command
For `predefined` or `user`, the `show` command now shows only types that are
valid in the current language.  (See the man page for details.)

** Language-sensitive type printing
When printing `enum`, `struct`, `class`, or `union` types, they are shown
differently depending on what language the type was defined in and whether the
current language is C or C++:

    c++decl> define S as struct S
    c++decl> show user typedef
    struct S;
    c++decl> set c
    cdecl> show all user typedef
    typedef struct S S;

** co_await, co_return, co_yield added
These C++20 keywords were added to prevent use as identifiers in C++20 and warn
in older languages.


* Changes in Cdecl 8.3

** "Did you mean ...?" added
If you make a typographical error for either commands or type names, you'll now
receive "did you mean?" suggestions as part of the error message.

** Multiple, comma-separated declarations
Multiple, comma-separated declarations are finally supported.

** C17