@@ -10,7 +10,7 @@ typedef unsigned DWORD32;
 typedef unsigned long DWORD64;
 typedef unsigned long DWORDLONG;
 typedef ULONG_PTR DWORD_PTR;
-typedef struct FILE FILE;
+typedef struct _iobuf FILE;
 typedef float FLOAT;
 typedef int HALF_PTR;
 typedef PVOID HANDLE;
@@ -238,7 +238,7 @@ typedef int32_t blksize_t;
 typedef long clock_t;
 typedef long clockid_t;
 typedef pthread_cond_t cnd_t;
-typedef int32_t dev_t;
+typedef int dev_t;
 typedef struct div_t div_t;
 typedef double double_t;
 typedef int errno_t;
@@ -252,7 +252,7 @@ typedef uint32_t gid_t;
 typedef struct imaxdiv_t imaxdiv_t;
 typedef uint32_t in_addr_t;
 typedef uint16_t in_port_t;
-typedef int32_t ino_t;
+typedef unsigned ino_t;
 typedef short int16_t;
 typedef int int32_t;
 typedef long int64_t;
@@ -284,7 +284,7 @@ typedef int32_t mode_t;
 typedef pthread_mutex_t mtx_t;
 typedef unsigned long nfds_t;
 typedef uint32_t nlink_t;
-typedef int64_t off_t;
+typedef long off_t;
 typedef int once_flag;
 typedef int32_t pid_t;
 typedef struct pthread_barrier_t pthread_barrier_t;
