@@ -237,7 +237,7 @@ using blksize_t = int32_t;
 using clock_t = long;
 using clockid_t = long;
 using cnd_t = pthread_cond_t;
-using dev_t = int32_t;
+using dev_t = int;
 struct div_t;
 using double_t = double;
 using errno_t = int;
@@ -251,7 +251,7 @@ using gid_t = uint32_t;
 struct imaxdiv_t;
 using in_addr_t = uint32_t;
 using in_port_t = uint16_t;
-using ino_t = int32_t;
+using ino_t = unsigned;
 using int16_t = short;
 using int32_t = int;
 using int64_t = long;
@@ -277,7 +277,7 @@ using mode_t = int32_t;
 using mtx_t = pthread_mutex_t;
 using nfds_t = unsigned long;
 using nlink_t = uint32_t;
-using off_t = int64_t;
+using off_t = long;
 using once_flag = int;
 using pid_t = int32_t;
 struct pthread_barrier_t;
